--- a/md/1.md
+++ b/md/1.md
@@ -15,6 +15,10 @@ su-git - Issue git command handling alternative SSH private key
                               Alternatively, you can set this up permanently using `git-config`: git config ssh.identity <file>
     --known-hosts <file>      Alternative path to the RSA known hosts file (default path used: ~/.ssh/known_hosts)
 
+    --help                    Display  help informations and exit.
+
+    --verbose                 Print debug informations at runtime.
+
 ## command
 
 Whatever command recognized by `git`. See the git(1) help section.
