--- a/md/1.md
+++ b/md/1.md
@@ -1,4 +1,4 @@
-SU-GIT 1 2017-11-26 su-git "User manuals"
+SU-GIT 1 2018-02-09 su-git "User manuals"
 ====
 
 ## NAME
@@ -11,15 +11,16 @@ su-git - Issue git command handling alternative SSH private key
 
 ## OPTIONS
 
-    --identity <file>         Path to the private key file. 
-                              Alternatively, you can set this up permanently using `git-config`: git config ssh.identity <file>
-    --known-hosts <file>      Alternative path to the RSA known hosts file (default path used: ~/.ssh/known_hosts)
+--identity <file>         Path to the private key file. 
+Alternatively, you can set this up permanently using `git-config` : git config ssh.identity <file>
 
-    --help                    Display  help informations and exit.
+--known-hosts <file>      Alternative path to the RSA known hosts file (default path used: `$HOME/.ssh/known_hosts`)
 
-    --verbose                 Print debug informations at runtime.
+--help                    Display help informations and exit.
 
-## command
+--verbose                 Print debug informations at runtime.
+
+## COMMAND
 
 Whatever command recognized by `git`. See the git(1) help section.
 
